--- a/app/templates/book.hbs
+++ b/app/templates/book.hbs
@@ -3,7 +3,7 @@
       <h2 class="text-center">Книги</h2>
       <div class="form-row navbar-panel justify-content-between">
         <div class="col-md-auto">
-          {{#link-to "create-book" class="btn btn-outline-primary my-2" type="button" title="Добавить книгу"}}
+          {{#link-to "book-create" class="btn btn-outline-primary my-2" type="button" title="Добавить книгу"}}
             <svg viewBox="0 0 16 16" class="bi bi-plus card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
             </svg>
@@ -27,7 +27,7 @@
           <div class="col mb-4">
               <div class="card">
               {{debugger}} 
-              <img src={{if book.image book.image "/book-cover.jpg"}} class="card-img-top" alt="Обложка книги">
+              <img src={{if book.image book.image "/images/book-cover.jpg"}} class="card-img-top" alt="Обложка книги">
               <div class="card-header">
                   <h5 class="card-title">{{book.name}}</h5>
               </div>
@@ -60,7 +60,7 @@
                     <a href="{{book.description}}" class="card-link line-offset" target="_blank" rel="noopener noreferrer">Описание</a>
                   </div>
                   <div class="col text-right">
-                    {{#link-to "edit-book" book.id type="button" class="btn btn-edit"}}
+                    {{#link-to "book-edit" book.id type="button" class="btn btn-edit"}}
                       <svg viewBox="0 0 16 16" class="bi bi-pencil card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                       </svg>
