--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -29,9 +29,17 @@
 			</li>
 		</ul>
 		<ul class="nav navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="#">Войти</a>
-			</li>
+			{{#if session.isAuthenticated}}
+				<li class="nav-item nav-link"><strong>{{currentUser.user.email}}</strong></li>				
+				<li class="nav-item nav-link"><a href="#" onclick={{action "logout"}}>Выйти</a></li>
+			{{else}}
+				<li class="nav-item">
+					{{#link-to "login"  class="nav-link"}}Войти{{/link-to}}
+				</li>
+				<li class="nav-item">
+					{{#link-to "register"  class="nav-link"}}Зарегистрироваться{{/link-to}}
+				</li>
+			{{/if}}
 		</ul>
 	</div>
 </nav>
