--- a/app/templates/components/meeting-form.hbs
+++ b/app/templates/components/meeting-form.hbs
@@ -2,34 +2,30 @@
     <h4>Дата встречи</h4>
     <div class="row h-100 justify-content-between mb-4">
         <div class="col-md-auto">
-            {{input-date meetingDate=(moment-format meeting.meetingDate 'DD.MM.YYYY') onChageDate=(action "changeDate")}}
+            {{input-date meetingDate=(moment-format meeting.meetingDate 'DD.MM.YYYY') onChangeDate=(action "changeDate")}}
         </div>
-        <!--<div class="col-md-auto">                     
-            <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
-            {{#link-to "meeting" class="btn btn-outline-secondary btn-lg"}}Отмена{{/link-to}}               
-        </div>-->
-        <div class="col-md-auto"> 
-            {{#link-to "create-report" class="btn btn-outline-primary my-2" type="button" title="Добавить доклад"}}
+        <div class="col-md-auto">                      
+            <button type="button" class="btn btn-outline-primary my-2" title="Добавить доклад" disabled={{new}} onclick={{action "addReport"}}>
                 <svg viewBox="0 0 16 16" class="bi bi-plus card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                 </svg>
-            {{/link-to}}
+            </button>            
         </div>      
     </div>
-    <h4>Список докладов</h4>
+    <h4>Список докладов</h4>    
     <ul class="list-group">
         {{#each meeting.reports as |report|}}
             <li class="list-group-item">
                 <div class="row h-100 justify-content-between">
                     <div class="col-md-2 text-center">
                         <h5 class="py-2">Спикер</h5>
-                        <img src="/photo/speaker.jpg" class="rounded w-100" alt="Спикер">
-                        <p>{{report.speaker.lastName}} {{report.speaker.firstName}} - Фамилия Имя</p>
+                        <img src="/speaker.jpg" class="rounded w-100" alt="Спикер">
+                        <p>{{report.speaker.fullName}}</p>
                     </div>
                     <div class="col-md-2 text-center">
                         <h5 class="py-2">Книга</h5>
-                        <p>{{report.book.name}} - Название</p>
-                        <p>{{report.book.author}} - Автор</p>
+                        <p>{{report.book.name}}</p>
+                        <p>{{report.book.author}}</p>
                         <div class="row align-items-center m-0">
                             <div class="col-md-auto pl-0">
                                 Оценка:
@@ -41,7 +37,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <h5 class="text-center py-2">Отзыв</h5>
                         <p>
                             {{report.review}}
@@ -49,20 +45,39 @@
                     </div>
                     <div class="col-md-2 text-center col-filter">
                         <h5 class="py-2">Ссылки</h5>
-                        <a href="{{report.urlVideo}}" class="btn btn-video" title="Посмотреть запись доклада">
-                            <svg viewBox="0 0 16 16" class="bi bi-camera-reels card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M0 8a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8zm11.5 5.175l3.5 1.556V7.269l-3.5 1.556v4.35zM2 7a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2z"/>
-                                <path fill-rule="evenodd" d="M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                                <path fill-rule="evenodd" d="M9 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                        {{#if (string-is-not-empty report.urlVideo)}}
+                            <a href="{{report.urlVideo}}" class="btn btn-video" title="Посмотреть запись доклада">
+                                <svg viewBox="0 0 16 16" class="bi bi-camera-reels card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M0 8a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8zm11.5 5.175l3.5 1.556V7.269l-3.5 1.556v4.35zM2 7a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2z"/>
+                                    <path fill-rule="evenodd" d="M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                    <path fill-rule="evenodd" d="M9 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                </svg>
+                            </a>
+                        {{/if}}
+                        {{#if (string-is-not-empty report.urlPresentation)}}
+                            <a href="{{report.urlPresentation}}" class="btn btn-present" title="Скачать презентацию">
+                                <svg viewBox="0 0 16 16" class="bi bi-file-ppt card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M4 0h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H4z"/>
+                                    <path fill-rule="evenodd" d="M6 4a.5.5 0 0 1 .5.5V12a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 6 4z"/>
+                                    <path fill-rule="evenodd" d="M8.5 5a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-3 2a3 3 0 1 1 6 0 3 3 0 0 1-6 0z"/>
+                                </svg>
+                            </a>
+                        {{/if}}
+                    </div>
+                    <div class="col-md-1 text-center col-filter">
+                        {{#link-to "edit-report" report.id class="btn btn-edit"}}
+                            <svg viewBox="0 0 16 16" class="bi bi-pencil card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                             </svg>
-                        </a>
-                        <a href="{{report.urlPresentation}}" class="btn btn-present" title="Скачать презентацию">
-                            <svg viewBox="0 0 16 16" class="bi bi-file-ppt card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M4 0h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H4z"/>
-                                <path fill-rule="evenodd" d="M6 4a.5.5 0 0 1 .5.5V12a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 6 4z"/>
-                                <path fill-rule="evenodd" d="M8.5 5a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-3 2a3 3 0 1 1 6 0 3 3 0 0 1-6 0z"/>
+                        {{/link-to}}
+                    </div>
+                    <div class="col-md-1 text-center col-filter">
+                        <button type="button" class="btn btn-trash" onclick={{action "deleteReport" report}}>
+                            <svg viewBox="0 0 16 16" class="bi bi-trash card-button" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                             </svg>
-                        </a>
+                        </button>
                     </div>
                 </div>
             </li>
